[package]
name = "wrapgen"
version = "0.1.0"
authors = ["Clemens Tiedt <clemens.tiedt@student.hpi.de>"]
license = "MIT"
repository = "https://github.com/ctiedt/wrapgen"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wrapgen"
path = "src/lib.rs"

[[bin]]
name = "wrapgen"
path = "src/main.rs"

[dependencies]
regex = "1.3.9"